# PiperWorkbench

./: .gitignore  Cargo.toml  README.md  build.rs
.claude/: settings.local.json
proj/: FIXES  PHASES  PROJECT  RULES  TODO  UIUX  rulestools.toml
src/: main.rs
ui/: main.slint
ui/globals/: theme.slint
ui/state/: sizes.slint
