[package]
name = "piper-workbench"
version = "0.1.0"
edition = "2021"
authors = ["mathi"]
description = "Piper linguistic development workbench"
repository = "https://github.com/yourusername/PiperWorkbench"

[dependencies]
slint = "1.0"
tokio = { version = "1", features = ["full"] }

# Audio
cpal = "0.17"
rubato = "0.14"

# Utils
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
